[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/energy_icons.png" type="Texture" id=1]
[ext_resource path="res://objects/energy_system/Component.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 4, 32, 8, 16 )

[node name="Component" type="Control"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -608.0
margin_bottom = -344.0
rect_min_size = Vector2( 32, 16 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
use_parent_material = true
margin_left = 8.0
margin_right = 24.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertL" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_left = 2.0
margin_right = 10.0
margin_bottom = 16.0
texture = SubResource( 5 )

[node name="AlertR" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_left = 22.0
margin_right = 30.0
margin_bottom = 16.0
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectorL" type="Control" parent="."]
visible = false
margin_left = 6.0
margin_top = 8.0
margin_right = 6.0
margin_bottom = 8.0

[node name="ConnectorR" type="Control" parent="."]
visible = false
margin_left = 26.0
margin_top = 8.0
margin_right = 26.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_BlinkAlerts" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer_BlinkAlerts" to="." method="_blink_alerts"]
